@@ -5,7 +5,7 @@
     <packaging>jar</packaging>
     <groupId>io.github.wayn111</groupId>
     <artifactId>mybatis-xmlreload-spring-boot-starter</artifactId>
-    <version>3.0.3</version>
+    <version>2.0.1-SNAPSHOT</version>
     <name>mybatis-xmlreload-spring-boot-starter</name>
     <url>https://github.com/wayn111/mybatis-xmlreload-spring-boot-starter</url>
     <description>mybais springboot项目中xml文件热加载支持</description>
@@ -33,8 +33,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>17</java.version>
-        <mybatis-spring-boot-starter.version>3.0.1</mybatis-spring-boot-starter.version>
+        <java.version>8</java.version>
+        <mybatis-spring-boot-starter.version>2.2.2</mybatis-spring-boot-starter.version>
         <directory-watcher.version>0.18.0</directory-watcher.version>
         <argLine>-Djdk.attach.allowAttachSelf --add-opens java.base/java.lang=ALL-UNNAMED -Dfile.encoding=UTF-8</argLine>
         <!-- 打包跳过单元测试 -->
@@ -53,7 +53,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>3.0.4</version>
+                <version>2.2.7.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -156,16 +156,16 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED
-                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
-                        --add-opens java.base/java.text=ALL-UNNAMED
-                        --add-opens java.desktop/java.awt.font=ALL-UNNAMED</argLine>
+                    <argLine>&#45;&#45;add-opens java.base/java.util=ALL-UNNAMED
+                        &#45;&#45;add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        &#45;&#45;add-opens java.base/java.text=ALL-UNNAMED
+                        &#45;&#45;add-opens java.desktop/java.awt.font=ALL-UNNAMED</argLine>
                 </configuration>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
